make a nicer constructor.